--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Simon Says</title>
   </head>
   <body>
+    <div class="messaggioNumeri"></div>
+    <div class="risultato"></div>
     <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
