--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Simon Says</title>
   </head>
   <body>
-    <div class="messaggioNumeri"></div>
+    <div class="start">
+      <div class="messaggioNumeri"></div>
+    </div>
     <div class="risultato"></div>
     <script type="text/javascript" src="js/script.js"></script>
   </body>
